# MultiFEBE

./: CHANGELOG.md  CMakeLists.txt  COPYRIGHT  Makefile  README.md  README.txt  TODO.md  _config.yml
_layouts/: default.html
docs/examples/: README.md
docs/examples/README_src/: README.tex  generate_md.sh
docs/manual/: bibliography.bib  manual.tex  packages.tex
docs/manual/figures/: Diagrama1.dia  Diagrama1.eps  MICINN_Gob_AEI_1.eps  bar.pdf_tex  coincident_boundary.ps  coincident_boundary.ps_tex  degbeam.pdf_tex  disrotra.pdf_tex  distra.pdf_tex  elements_2D_disc.ps  elements_2D_disc.ps_tex  elements_2d.ps  elements_2d.ps_tex  feder.eps  financing.eps  incidence_angle.eps  incidence_angle.eps_tex  incidence_angle.eps_tex.aux  local_axes_yref.pdf_tex  local_axes_yref_2d.pdf_tex  ordinary_boundary_exterior.ps  ordinary_boundary_exterior.ps_tex  ordinary_boundary_interface.ps  ordinary_boundary_interface.ps_tex  shell_fe.eps  strbeam.pdf_tex  stress_resultants_beam.pdf_tex  stress_resultants_shell.pdf_tex  symmetry_planes_00.eps  symmetry_planes_01.eps  symmetry_planes_02.eps  symmetry_planes_03.eps  symmetry_planes_04.eps  symmetry_planes_05.eps  symmetry_planes_06.eps  symmetry_planes_07.eps
docs/tutorials/: List of tutorials.odt
docs/tutorials/tutorial_002/: tutorial_002.aux  tutorial_002.out
examples/: README.txt
examples/offshore_wind_turbine/flexible/: Bucket.geo  SoilSkirt.geo  mesh.geo
examples/offshore_wind_turbine/rigid/: README.txt
examples/owt_softwarex/: README.txt  TODO.txt
examples/owt_softwarex/flexible/: FreeSurface.geo  README.txt  SoilLid.geo
examples/owt_softwarex/rigid/: mesh.geo
lib/fbem/: COPYRIGHT  Makefile  README.md  README.txt
lib/fbem/src/: bem_general.f90  bem_harela2d.f90  bem_harela3d.f90  bem_harpor2d.f90  bem_harpor3d.f90  bem_harpot2d.f90  bem_harpot3d.f90  bem_staela2d.f90  bem_staela3d.f90  bem_stapot2d.f90  bem_stapot3d.f90  data_structures.f90  fem_beams.f90  fem_shells.f90  fem_solids.f90  geometry.f90  gmsh.f90  harela_incident_field.f90  harpor_incident_field.f90  harpot_incident_field.f90  mesh.f90  numerical.f90  polar_transformation.f90  quad_rules.f90  quasisingular_integration.f90  shape_functions.f90  string_handling.f90  symmetry.f90  telles_transformation.f90
lib/sdf-0.75-RC4/: AUTHORS.txt  COPYRIGHT.txt  Makefile  Makefile_msvc  README.txt  sdf_f77_tests.f  sdf_subs.c  sdf_subs.h  test_complex_c89.c  test_rbwb.f  test_sdf_dynamic.F90  test_sdf_large.c
lib/sdf-0.75-RC4/docs/: CHANGELOG.txt  INSTALL.txt  SDF_MANIFESTO.txt
lib/sdf-0.75-RC4/idl/: COPYRIGHT.txt  get_size.pro  move_up.pro  sdf_details.pro  sdf_read_arr.pro  sdf_sizes.pro  sdf_wb.pro  string_to_data.pro
lib/sdf-0.75-RC8/: ._sdf_subs.c  ._sdf_subs.h  COPYRIGHT.txt  Makefile  README.txt  fflag-extra.inc  main_test_sdf.c  read_writemask.c  sdf_browse  sdf_browse.c  sdf_example_file.sdf  sdf_f77_tests.f  sdf_f77_testt.f  sdf_subs.c  sdf_subs.h  sdf_test_edit.c  strlenfmt.h  test_complex_c99.c  test_prim.f  test_sdf_3d.c  test_sdf_4d.c  test_sdf_5d.c  test_sdf_transpose.F90  testvers.f  xforttest
lib/sdf-0.75-RC8/docs/: CHANGELOG.txt  FILE_STRUCTURE.txt  INSTALL.txt  MULTI_DIM_ARRAYS_C.txt  SDF_USAGE_NOTES.txt
lib/sdf-0.75-RC8/idl/: ._sdf_read_all.pro  (+18 more)
src/: assemble_bem_bl_harela_equation.f90  assemble_bem_bl_staela_equation.f90  assemble_bem_harela_equation.f90  assemble_bem_harela_equation_sa.f90  assemble_bem_harpor_equation.f90  assemble_bem_harpot_equation.f90  assemble_bem_harpot_equation_sa.f90  assemble_bem_laplace_equation.f90  assemble_bem_laplace_equation_sa.f90  assemble_bem_staela_equation.f90  assemble_bem_staela_equation_sa.f90  assemble_fem_harela_coupling.f90  assemble_fem_harela_dKdx.f90  assemble_fem_harela_dfdx.f90  assemble_fem_harela_stiffness_matrix.f90  assemble_fem_staela_coupling.f90  assemble_fem_staela_stiffness_matrix.f90  assign_default_bem_formulation.f90  assign_default_conditions_bem_bodyloads_mechanics_harmonic.f90  assign_default_conditions_bem_bodyloads_mechanics_static.f90  assign_default_conditions_bem_boundaries_laplace.f90  assign_default_conditions_bem_boundaries_mechanics_harmonic.f90  assign_default_conditions_bem_boundaries_mechanics_static.f90  assign_default_conditions_fem_elements.f90  assign_default_conditions_fem_nodes.f90  assign_default_conditions_fem_nodes_symmetry_planes.f90  assign_solution_laplace.f90  assign_solution_laplace_sa.f90  assign_solution_mechanics_harmonic.f90  assign_solution_mechanics_harmonic_sa.f90  assign_solution_mechanics_static.f90  assign_solution_mechanics_static_sa.f90  build_auxiliary_variables_laplace.f90  build_auxiliary_variables_mechanics_harmonic.f90  build_auxiliary_variables_mechanics_static.f90  build_connectivities_be_and_fe.f90  build_connectivities_be_bodyload_elements_and_fe.f90  build_connectivities_rigid_regions.f90  build_connectivity_be_bodyload_element_fe.f90  build_connectivity_be_fe.f90  (+111 more)
tools/gid/: multifebe_unix.bas  multifebe_win.bas
utils/f90doc/: htmling.pl
(+265 files in other folders)
